--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,8 @@
         android:text="-"
         android:textColor="#191818"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="#ffff"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,7 +81,8 @@
         android:text="+"
         android:textColor="#191818"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:background="#ffff"/>
 
     </LinearLayout>
 
@@ -90,7 +92,8 @@
         android:ems="12"
         android:text="Order"
         android:layout_marginTop="16dp"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:background="#ffff"/>
 
     <TextView
         android:id="@+id/thanks"
